--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,8 +20,7 @@
 
 .container {
     height: 100%;
-    background-color: aqua;
-    margin-top: 117px;
+    margin-top: 198px;
     margin-bottom: 207px;
     padding-left: 82px;
 }
@@ -34,10 +33,52 @@ h1 {
     color: #FF4081;
 }
 
-h2 {
+.sub-title {
     font-family: 'Ubuntu', sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 23px;
     color: #555555;
+    margin-bottom: 82px;
+}
+
+h2 {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 40px;
+    color: #FF4081;
+}
+
+.box-course-description {
+    display: flex;
+}
+
+.box-course-description>div {
+    margin-left: 53px;
+}
+
+.description {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 21px;
+    margin-top: 37px;
+    margin-bottom: 53px;
+    width: 724px;
+
+}
+
+.button {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23px;
+    height: 25px;
+    width: 216px;
+    border-radius: 62px;
+    color: #FFF;
+    background-color: #419488;
+    text-align: center;
+    padding: 13px 9px;
 }
